Changes based on Java in Education meeting
Used var in more places